--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@ html {
   transition: background 3s ease;
 }
 
+.favourites {
+  background: linear-gradient(270deg, #25599b, #12639d);
+}
+
 .tenders {
   background: linear-gradient(270deg, #2c7a5a, #126e64);
 }
@@ -26,4 +30,9 @@ html {
   0%{background-position:0 50%}
   50%{background-position:100% 50%}
   100%{background-position:0 50%}
+}
+
+@keyframes appearance {
+  0% {opacity: 0;}
+  100% {opacity: 1;}
 }
